name:                gbm-client
version:             1.0
author:              David Waern
maintainer:          david.waern@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable gbm-client
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base, aeson, lens-aeson, curl, curl-aeson, cassava, bytestring, cmdargs, vector, text, http-client, wreq-sb, lens, tagsoup, utf8-string, logging, configurator, safe, unordered-containers, network-uri
  default-language:    Haskell2010
