name:                gbm-client
version:             1.0
author:              David Waern
maintainer:          david.waern@gmail.com
build-type:          Custom
cabal-version:       >=1.10

executable gbm-client
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base, string-conv, aeson, lens-aeson, curl, curl-aeson, cassava, bytestring, cmdargs, vector, text, http-types, http-client, wreq-sb, lens, tagsoup, logging, configurator, safe, unordered-containers, network-uri
  default-language:    Haskell2010
